Changes:
- Initial commit release 3.2.0
- Servlet API 5.0
- Java 17
- Fixing CVE vulnerabilities
- Fixes in the logging system
- Doc update